[[bin]]
name = "dvideos"
path = "bin/main.rs"
doc = false

[package]
name = "dvideos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
lazy_static = "1.4.0"
num_cpus = "1.15.0"
once_cell = "1.17.0"
parking_lot = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
time = { version = "0.3.17", features = ["macros"] }
tokio = { version = "1.24.0", features = ["full"] }
toml = "0.5.10"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "time", "local-time"]}
